# ai_research

./: pyproject.toml  requirements.txt
app/nootbook/: expriements.ipynb
app/services/: embedding.py  load_file.py  split_chunking.py  store_vector.py
