[project]
name = "ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "sentence-transformers>=5.5.0",
    "tiktoken>=0.13.0",
]
